starmath/qa/cppunit/test_cursor.cxx
@@ -87,7 +87,7 @@ void Test::testCopyPaste()
     aCursor.Move(pOutputDevice, MoveRight);
     aCursor.Paste();
 
-    CPPUNIT_ASSERT_EQUAL(OUString("{ a * b + c * b }"), xDocShRef->GetText());
+    CPPUNIT_ASSERT_EQUAL(OUString("{ { a * b } + { c * b } }"), xDocShRef->GetText());
 }
 
 void Test::testCopySelectPaste()
@@ -113,7 +113,7 @@ void Test::testCopySelectPaste()
     aCursor.Move(pOutputDevice, MoveRight, false);
     aCursor.Paste();
 
-    CPPUNIT_ASSERT_EQUAL(OUString("{ b + c * b + c }"), xDocShRef->GetText());
+    CPPUNIT_ASSERT_EQUAL(OUString("{ { b + { c * b } } + c }"), xDocShRef->GetText());
 }
 
 void Test::testCutPaste()
@@ -130,12 +130,12 @@ void Test::testCutPaste()
     aCursor.Move(pOutputDevice, MoveRight, false);
     aCursor.Move(pOutputDevice, MoveRight, false);
     aCursor.Cut();
-    // go to the left end and then paste
+    // go to the right end and then paste
     aCursor.Move(pOutputDevice, MoveRight);
     aCursor.Move(pOutputDevice, MoveRight);
     aCursor.Paste();
 
-    CPPUNIT_ASSERT_EQUAL(OUString("{ a + c * b }"), xDocShRef->GetText());
+    CPPUNIT_ASSERT_EQUAL(OUString("{ a + { c * b } }"), xDocShRef->GetText());
 }
 
 void Test::testCutSelectPaste()
@@ -161,7 +161,7 @@ void Test::testCutSelectPaste()
     aCursor.Move(pOutputDevice, MoveRight, false);
     aCursor.Paste();
 
-    CPPUNIT_ASSERT_EQUAL(OUString("{ b + c * }"), xDocShRef->GetText());
+    CPPUNIT_ASSERT_EQUAL(OUString("{ b + { c * } }"), xDocShRef->GetText());
 }
 
 CPPUNIT_TEST_SUITE_REGISTRATION(Test);
